css/color.scss
/*!
 * SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */
:root {
	--my-header-bottom-margin: 10px !important;
}

body {
	background-image: unset !important;
	background-color: gray !important;
}

header#header {
	background-color: white !important;
	border-bottom: 1px solid #dddddd;
}

#contactsmenu .header-menu__trigger,
#notifications .header-menu__trigger {
	opacity: .865 !important;
	img {
		filter: invert(100%);
	}
}
// for NC >= 28
#header .header-right,
// for NC >= 31
#header .header-end {
	svg {
		fill: #1f1f1f;
	}
}
// for NC >= 29
#header .header-right > .header-menu:not(.user-menu),
// for NC >= 31
#header .header-end > .header-menu:not(.user-menu) {
	filter: unset !important;
}

#unified-search {
	> a {
		opacity: 1 !important;
	}
	svg {
		fill: #1f1f1f;
	}
}

// central menu
#central-app-menu {
	.menu-icon {
		color: #1f1f1f !important;
	}
}

